Add ability to remove tabs, added SpruceHandledScreen, removed lot of NotNull annotations, etc.